Upgrade to Cassandra 5.0.6, bump version to 0.10.0-SNAPSHOT
- Cassandra 4.1.4 -> 5.0.6
- Java target 1.8 -> 17
- Remove standalone module from build
- Netty 4.1.58 -> 4.1.119 + netty-codec-http
- Picocli 3.6.1 -> 4.7.7
- Update test deps (TestNG 7.11.0, Mockito 5.20.0, AssertJ 3.27.6)
- Add commons-codec, bouncycastle test deps
- Fix endpoint scope parsing for CS 5.0 port format
- Update Maven plugin versions